<resources>
    <string name="app_name">main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_passenger">Find a Ride</string>
    <string name="menu_Driver">Your Rides</string>
    <string name="menu_Account">Account</string>
    <string name="spinner_select">Select</string>
    <string name="logout">log out</string>
    <string name="Fanar">Fanar</string>
    <string name="leave">Leave Ride</string>
    <string name="make">Make Request</string>
    <string name="cancel">Cancel request</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="fanar">Fanar</string>
    <string name="noUp">You have no upcoming rides, make a request to join one.</string>
    <string name="noReq">You have made no request, search for a ride to join.</string>
    <string name="noRide">We have 0 rides that match ur requirements, try again later.</string>
    <string name="my_requests">My requests</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="upcoming_rides">Upcoming Rides</string>
    <string name="search">search</string>
    <string name="submit">Submit</string>
    <string name="cancel2">Cancel</string>
    <string name="no_conditions_selected_click_on_the_button_to_add_conditions">No conditions selected, click on the + button to add conditions.</string>
    <string name="name">Name</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="re_enter_new_password">Re-enter new Password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="check">Check</string>
    <string name="enter_old_password">Enter old Password</string>
    <string name="start_a_ride">Start a ride</string>
    <string name="status">Status:</string>
    <string name="start_time">Start time:</string>
    <string name="passenger_count">Passenger Count:</string>
    <string name="requests_on_this_ride">Requests on this ride:</string>
    <string name="reviews">Reviews</string>
    <string-array name="Locations">
        <item>Fanar</item>
        <item>Jbeil</item>
        <item>Jdeide</item>
        <item>Jal el Dib</item>
        <item>Antelias</item>
        <item>Zouk Mosbeh</item>
        <item>Jounieh</item>
        <item>Beirut</item>

    </string-array>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating">Rating</string>
    <string name="max_capacity">Max capacity:</string>
    <string name="ride_details">Ride Details:</string>
    <string name="date_of_the_ride">Date of the ride:</string>
    <string name="time_of_the_ride">Time of the ride:</string>
    <string name="pending">Pending requests:</string>
    <string name="accepted">Accepted Requests:</string>
    <string name="no_requests_on_this_ride">No requests on this ride.</string>
    <string name="close">Close</string>
    <string name="destination">Destination:</string>
    <string name="driver">Driver:</string>
    <string name="source">Source:</string>
    <string name="start_ride">Depart</string>
    <string name="end">End ride</string>
    <string name="myridesEmpty">No upcoming rides, make sure to start one if u get the chance!</string>
</resources>