<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_passenger"
            android:icon="@drawable/seat_belt"
            android:title="@string/menu_passenger" />
        <item
            android:id="@+id/nav_driver"
            android:icon="@drawable/car"
            android:title="@string/menu_Driver" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_Account" />
        <item
            android:id="@+id/nav_review"
            android:icon="@drawable/ic_baseline_rate_review_24"
            android:title="@string/reviews" />

    </group>
</menu>