<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_passenger">

    <fragment
        android:id="@+id/nav_passenger"
        android:name="com.example.main.ui.PassengerFragment"
        android:label="@string/menu_passenger"
        tools:layout="@layout/fragment_passenger" />

    <fragment
        android:id="@+id/nav_driver"
        android:name="com.example.main.ui.DriverFragment"
        android:label="@string/menu_Driver"
        tools:layout="@layout/fragment_driver" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.main.ui.AccountFragment"
        android:label="@string/menu_Account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_review"
        android:name="com.example.main.ui.ReviewFragment"
        android:label="@string/reviews"
        tools:layout="@layout/fragment_review" />
</navigation>