<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:id="@+id/parent"
    app:cardElevation="50dp"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="10dp"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="5dp">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/driver"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtName"
        android:layout_marginTop="20dp"
        android:text="@string/start_time"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="@+id/txtName"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <TextView
        android:id="@+id/txtdest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_toRightOf="@+id/txtName"
        android:text="@string/destination"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/txtSrc"
        app:layout_constraintStart_toStartOf="@+id/txtSrc"
        app:layout_constraintTop_toTopOf="@+id/txtName" />

    <TextView
        android:id="@+id/txtSrc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtdest"
        android:layout_alignStart="@id/txtdest"
        android:layout_marginStart="40dp"
        android:text="@string/source"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/txtTime"
        app:layout_constraintStart_toEndOf="@+id/txtTime"
        app:layout_constraintTop_toTopOf="@+id/txtTime" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>