<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_centerInParent="true"
    android:padding="5dp"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_centerInParent="true"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingBottom="10dp"
        android:text="Enter your old password to check:"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/checkPass"
        app:layout_constraintEnd_toEndOf="@+id/checkPass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/checkPass" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/blue"
        android:text="@string/cancel2"
        app:layout_constraintStart_toStartOf="@+id/txtPass2"
        app:layout_constraintTop_toBottomOf="@+id/txtPass2" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/txtPass2"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toEndOf="@+id/cancelBtn"
        app:layout_constraintTop_toTopOf="@+id/cancelBtn" />

    <EditText
        android:id="@+id/checkPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_lock_open_24"
        android:ems="10"
        android:hint="@string/enter_old_password"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/checkBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:backgroundTint="@color/blue"
        android:padding="2dp"
        android:text="@string/check"
        app:layout_constraintEnd_toEndOf="@+id/checkPass"
        app:layout_constraintStart_toStartOf="@+id/checkPass"
        app:layout_constraintTop_toBottomOf="@+id/checkPass" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/enter_new_password"
        android:inputType="textPersonName"
        android:padding="2dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkPass" />

    <EditText
        android:id="@+id/txtPass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_password"
        android:ems="10"
        android:hint="@string/re_enter_new_password"
        android:inputType="textPersonName"
        android:padding="2dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>